# nnemu

./: .clangd  CMakeLists.txt  Makefile  README.md
riscv/: devices.cc  devices.h  dts.cc  ns16550.cc  platform.h  sim.cc  sim.h  vga.cc
spike_main/: spike.cc
src/: common.h  main.cc
src/device/: clint_device.cc  device.h  gpio_device.cc  keyboard_device.cc  plic_device.cc  serial.cc  sim_device.cc  uart_device.cc  vga_device.cc
src/monitor/: monitor.cc  monitor.h
src/sdb/: command.cc  command.h  expr.cc  expr.h  expr.l  expr.y  sdb.cc  sdb.h  watchpoint.cc  watchpoint.h
src/tracer/: dtrace.h  ftrace.cc  ftrace.h  itrace.h  ring_buf.h
